# history-service

./: CMakeLists.txt
Ubuntu/History/: CMakeLists.txt
debian/: changelog  control  rules
src/: contactmatcher.cpp  contactmatcher_p.h  filter.cpp
tests/common/mock/: textchannel.cpp  textchannel.h
tests/libhistoryservice/: PhoneUtilsTest.cpp
